New requests, repository and services edited. OneToMany - mappedBy removed.